crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__linkers-multiple.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng",
    "hrv",
    "spa"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng",
          "hrv",
          "spa"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": null,
            "role": "Investigator",
            "speaker_code": "INV"
          },
          {
            "name": null,
            "role": "Sister",
            "speaker_code": "SIS"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Investigator",
        "speaker": "INV",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Sister",
        "speaker": "SIS",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Multiple linkers on a single utterance",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: two or more linkers before main content",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Source: ca-data Croatian and CallFriend Spanish examples",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "tell",
              "content": [
                {
                  "content": "tell",
                  "type": "text"
                }
              ],
              "raw_text": "tell",
              "type": "word"
            },
            {
              "cleaned_text": "me",
              "content": [
                {
                  "content": "me",
                  "type": "text"
                }
              ],
              "raw_text": "me",
              "type": "word"
            },
            {
              "cleaned_text": "more",
              "content": [
                {
                  "content": "more",
                  "type": "text"
                }
              ],
              "raw_text": "more",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "INV"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "dog",
              "content": [
                {
                  "content": "dog",
                  "type": "text"
                }
              ],
              "raw_text": "dog",
              "type": "word"
            },
            {
              "cleaned_text": "ran",
              "content": [
                {
                  "content": "ran",
                  "type": "text"
                }
              ],
              "raw_text": "ran",
              "type": "word"
            },
            {
              "cleaned_text": "away",
              "content": [
                {
                  "content": "away",
                  "type": "text"
                }
              ],
              "raw_text": "away",
              "type": "word"
            }
          ],
          "linkers": [
            {
              "type": "lazy_overlap_precedes"
            },
            {
              "type": "self_completion"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "in",
              "content": [
                {
                  "content": "in",
                  "type": "text"
                }
              ],
              "raw_text": "in",
              "type": "word"
            },
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "park",
              "content": [
                {
                  "content": "park",
                  "type": "text"
                }
              ],
              "raw_text": "park",
              "type": "word"
            }
          ],
          "linkers": [
            {
              "type": "self_completion"
            },
            {
              "type": "quick_uptake"
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        },
        "speaker": "SIS"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "give",
              "content": [
                {
                  "content": "give",
                  "type": "text"
                }
              ],
              "raw_text": "give",
              "type": "word"
            },
            {
              "cleaned_text": "me",
              "content": [
                {
                  "content": "me",
                  "type": "text"
                }
              ],
              "raw_text": "me",
              "type": "word"
            },
            {
              "cleaned_text": "that",
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "type": "word"
            }
          ],
          "linkers": [
            {
              "type": "lazy_overlap_precedes"
            },
            {
              "type": "quotation_follows"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "INV": {
      "birth_date": null,
      "code": "INV",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Investigator",
        "speaker": "INV"
      },
      "name": null,
      "role": "Investigator"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    },
    "SIS": {
      "birth_date": null,
      "code": "SIS",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Sister",
        "speaker": "SIS"
      },
      "name": null,
      "role": "Sister"
    }
  }
}
