crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__long-features.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "options": [
          "CA"
        ],
        "type": "options"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "long-features",
        "media_type": "audio",
        "status": "unlinked",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Long feature spans and nonvocal begin/end markers",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: long_feature, long_feature_begin, long_feature_begin_marker,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "long_feature_end, long_feature_end_marker, long_feature_label,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "nonvocal, nonvocal_begin, nonvocal_begin_marker, nonvocal_end,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "nonvocal_end_marker, nonvocal_simple",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "label": "X",
              "type": "long_feature_begin"
            },
            {
              "cleaned_text": "deal",
              "content": [
                {
                  "content": "deal",
                  "type": "text"
                }
              ],
              "raw_text": "deal",
              "type": "word"
            },
            {
              "cleaned_text": "with",
              "content": [
                {
                  "content": "with",
                  "type": "text"
                }
              ],
              "raw_text": "with",
              "type": "word"
            },
            {
              "label": "X",
              "type": "long_feature_end"
            },
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "slightest",
              "content": [
                {
                  "content": "slightest",
                  "type": "text"
                }
              ],
              "raw_text": "slightest",
              "type": "word"
            },
            {
              "cleaned_text": "pressure",
              "content": [
                {
                  "content": "pressure",
                  "type": "text"
                }
              ],
              "raw_text": "pressure",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "label": "PAR",
              "type": "long_feature_begin"
            },
            {
              "cleaned_text": "is",
              "content": [
                {
                  "content": "is",
                  "type": "text"
                }
              ],
              "raw_text": "is",
              "type": "word"
            },
            {
              "label": "THUMP",
              "type": "nonvocal_begin"
            },
            {
              "event_type": "nonvocal",
              "type": "event"
            },
            {
              "cleaned_text": "this",
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "type": "word"
            },
            {
              "event_type": "nonvocal",
              "type": "event"
            },
            {
              "label": "X",
              "type": "long_feature_begin"
            },
            {
              "cleaned_text": "one",
              "content": [
                {
                  "content": "one",
                  "type": "text"
                }
              ],
              "raw_text": "one",
              "type": "word"
            },
            {
              "label": "X",
              "type": "long_feature_end"
            },
            {
              "cleaned_text": "working",
              "content": [
                {
                  "content": "working",
                  "type": "text"
                }
              ],
              "raw_text": "working",
              "type": "word"
            },
            {
              "label": "THUMP",
              "type": "nonvocal_end"
            },
            {
              "label": "PAR",
              "type": "long_feature_end"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "label": "BANG",
              "type": "nonvocal_simple"
            },
            {
              "cleaned_text": "what",
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "type": "word"
            },
            {
              "cleaned_text": "was",
              "content": [
                {
                  "content": "was",
                  "type": "text"
                }
              ],
              "raw_text": "was",
              "type": "word"
            },
            {
              "cleaned_text": "that",
              "content": [
                {
                  "content": "that",
                  "type": "text"
                }
              ],
              "raw_text": "that",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "media": {
    "filename": "long-features",
    "media_type": "audio",
    "status": "unlinked"
  },
  "options": [
    "CA"
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
