crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__media-bullets.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;00.",
        "corpus": "sample",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "sample",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "media-bullets",
        "media_type": "video",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Inline timing bullets on main tier and dependent tiers, inline_pic",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: inline_bullet, timing_annotation, text_with_bullets,",
              "type": "text"
            },
            {
              "type": "continuation"
            },
            {
              "text": "text_with_bullets_and_pics, media bullets on dependent tiers, inline_pic",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "this is junk ",
                  "type": "text"
                },
                {
                  "end_ms": 2042652,
                  "start_ms": 2041689,
                  "type": "bullet"
                }
              ]
            }
          },
          "type": "Cod"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 2042652,
            "start_ms": 2041689
          },
          "content": [
            {
              "cleaned_text": "hello",
              "content": [
                {
                  "content": "hello",
                  "type": "text"
                }
              ],
              "raw_text": "hello",
              "type": "word"
            },
            {
              "cleaned_text": "there",
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "foo ",
                  "type": "text"
                },
                {
                  "end_ms": 2062652,
                  "start_ms": 2061689,
                  "type": "bullet"
                },
                {
                  "text": " bar ",
                  "type": "text"
                },
                {
                  "end_ms": 2062652,
                  "start_ms": 2061689,
                  "type": "bullet"
                }
              ]
            }
          },
          "type": "Act"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "pic002 ",
                  "type": "text"
                },
                {
                  "filename": "a18/image002.jpg",
                  "type": "picture"
                }
              ]
            }
          },
          "type": "Com"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 5042652,
            "start_ms": 5041689
          },
          "content": [
            {
              "cleaned_text": "how",
              "content": [
                {
                  "content": "how",
                  "type": "text"
                }
              ],
              "raw_text": "how",
              "type": "word"
            },
            {
              "cleaned_text": "are",
              "content": [
                {
                  "content": "are",
                  "type": "text"
                }
              ],
              "raw_text": "are",
              "type": "word"
            },
            {
              "cleaned_text": "you",
              "content": [
                {
                  "content": "you",
                  "type": "text"
                }
              ],
              "raw_text": "you",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "media": {
    "filename": "media-bullets",
    "media_type": "video"
  },
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;00.",
        "corpus": "sample",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "sample",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
